图片打包引入，小体积的图片使用base64打包，设定outputPath来给打包文件分类

--- a/webpack_01/src/style/index.css
+++ b/webpack_01/src/style/index.css
@@ -1,5 +1,8 @@
 @import './a.css';
 h4{
+    width: 400px;
+    height: 300px;
     border: 1px solid #dadade;
+    background: url("../image/img0.png");
     transform: rotate(20deg);
-  }
+}
